Proposal UI Layout

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cssweng",
   "version": "0.0.1",
   "description": "A Quasar Project",
-  "productName": "Quasar App",
+  "productName": "Data Compiler",
   "author": "CSSWENG Group 3",
   "private": true,
   "scripts": {
@@ -28,6 +28,7 @@
     "@quasar/app-vite": "^1.0.0",
     "autoprefixer": "^10.4.2",
     "electron": "^21.0.1",
+    "electron-builder": "^22.4.0",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
