--- a/package.json
+++ b/package.json
@@ -16,22 +16,24 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
-    "axios": "^0.21.1",
+    "axios": "^1.1.2",
+    "exceljs": "^4.3.0",
+    "mica-electron": "^1.0.7",
     "pinia": "^2.0.11",
-    "quasar": "^2.6.0",
+    "quasar": "^2.9.2",
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
-    "@intlify/vite-plugin-vue-i18n": "^3.3.1",
+    "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@quasar/app-vite": "^1.0.0",
     "autoprefixer": "^10.4.2",
-    "electron": "^21.0.1",
-    "electron-builder": "^22.4.0",
+    "electron": "^21.1.0",
+    "electron-builder": "^23.3.3",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-vue": "^9.0.0",
+    "eslint-plugin-vue": "^9.6.0",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1"
   },
