--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^1.1.2",
     "exceljs": "^4.3.0",
-    "mica-electron": "^1.0.7",
-    "pinia": "^2.0.11",
+    "mica-electron": "1.0.7",
+    "pinia": "^2.0.23",
     "quasar": "^2.9.2",
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
