--- a/package.json
+++ b/package.json
@@ -12,29 +12,31 @@
     "start": "quasar dev -m electron",
     "build": "quasar build -m electron",
     "build:debug": "quasar build -m electron -d",
-    "build:release": "quasar build -m electron -P always"
+    "build:release": "quasar build -m electron -P always",
+    "postinstall": "electron-rebuild"
   },
   "dependencies": {
-    "@quasar/extras": "^1.0.0",
-    "axios": "^1.1.2",
+    "@quasar/extras": "^1.15.5",
+    "axios": "^1.1.3",
     "exceljs": "^4.3.0",
-    "mica-electron": "1.0.7",
+    "mica-electron": "1.1.4",
     "pinia": "^2.0.23",
-    "quasar": "^2.9.2",
-    "vue": "^3.0.0",
+    "quasar": "^2.10.0",
+    "vue": "^3.2.41",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
-    "@quasar/app-vite": "^1.0.0",
+    "@quasar/app-vite": "^1.1.3",
     "autoprefixer": "^10.4.2",
-    "electron": "^21.1.0",
+    "electron": "^21.1.1",
     "electron-builder": "^23.6.0",
+    "electron-rebuild": "^3.2.9",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.6.0",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.18",
     "prettier": "^2.5.1"
   },
   "engines": {
