Dev Build 7 - Release Test 2
- switch to typescript hybrid backend
- linted frontend and backend
- add settings page for custom aliases
- refactor handers to a single file
- add bettor store

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,10 +12,11 @@
     "typescript",
     "vue"
   ],
+  "typescript.tsdk": "node_modules/typescript/lib",
   "[vue]": {
     "editor.defaultFormatter": "octref.vetur"
   },
-  "[javascript]": {
-    "editor.defaultFormatter": "vscode.typescript-language-features"
+  "[json]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
   }
 }
