--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cssweng",
+  "name": "cssweng3",
   "version": "0.0.1",
   "description": "A Quasar Project",
-  "productName": "Data Compiler",
-  "author": "CSSWENG Group 3",
+  "productName": "Sports Betting Data Compiler",
+  "author": "yazninja <yazlesean@gmail.com>",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
@@ -16,28 +16,29 @@
     "postinstall": "electron-rebuild"
   },
   "dependencies": {
-    "@quasar/extras": "^1.15.5",
-    "axios": "^1.1.3",
+    "@quasar/extras": "^1.0.0",
     "exceljs": "^4.3.0",
-    "mica-electron": "1.1.4",
-    "pinia": "^2.0.23",
-    "quasar": "^2.10.0",
-    "vue": "^3.2.41",
-    "vue-i18n": "^9.0.0",
+    "mica-electron": "^1.1.4",
+    "pinia": "^2.0.11",
+    "quasar": "^2.6.0",
+    "vue": "^3.0.0",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
-    "@intlify/vite-plugin-vue-i18n": "^6.0.3",
-    "@quasar/app-vite": "^1.1.3",
+    "@quasar/app-vite": "^1.0.0",
+    "@types/node": "^18.11.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
+    "@vue/devtools": "^6.4.4",
     "autoprefixer": "^10.4.2",
     "electron": "^21.1.1",
     "electron-builder": "^23.6.0",
     "electron-rebuild": "^3.2.9",
-    "eslint": "^8.25.0",
+    "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-vue": "^9.6.0",
-    "postcss": "^8.4.18",
-    "prettier": "^2.5.1"
+    "eslint-plugin-vue": "^9.0.0",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.4"
   },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
