--- a/package.json
+++ b/package.json
@@ -16,32 +16,32 @@
     "postinstall": "electron-rebuild"
   },
   "dependencies": {
-    "@quasar/extras": "^1.0.0",
+    "@quasar/extras": "^1.15.6",
     "exceljs": "^4.3.0",
-    "mica-electron": "^1.1.5",
-    "pinia": "^2.0.11",
-    "quasar": "^2.6.0",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "mica-electron": "^1.1.6",
+    "pinia": "^2.0.24",
+    "quasar": "^2.10.2",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@quasar/app-vite": "^1.0.0",
-    "@types/node": "^18.11.3",
-    "@typescript-eslint/eslint-plugin": "^5.40.1",
-    "@typescript-eslint/parser": "^5.40.1",
+    "@electron/rebuild": "^3.2.10",
+    "@quasar/app-vite": "^1.1.3",
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
     "@vue/devtools": "^6.4.5",
-    "autoprefixer": "^10.4.2",
-    "electron": "^21.2.0",
+    "autoprefixer": "^10.4.13",
+    "electron": "^21.3.0",
     "electron-builder": "^23.6.0",
-    "electron-rebuild": "^3.2.9",
-    "eslint": "^8.26.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-vue": "^9.0.0",
-    "prettier": "^2.5.1",
-    "typescript": "^4.5.4"
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-vue": "^9.7.0",
+    "prettier": "^2.7.1",
+    "typescript": "^4.9.3"
   },
   "engines": {
-    "node": "^18 || ^16 || ^14.19",
+    "node": "^19 || ^18 || ^16 || ^14.19",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1"
   }
