--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Install and Configure Node Modules
         run: |
-          pnpm install
+          pnpm preinstall && pnpm install
       - name: Build the DMG
         run: pnpm build
         
