--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "build": "quasar build -m electron",
     "build:debug": "quasar build -m electron -d",
     "build:release": "quasar build -m electron -P always",
-    "preinstall": "node preinstall.js",
-    "postinstall": "electron-rebuild"
+    "preinstall": "node preinstall.js"
   },
   "dependencies": {
     "@quasar/extras": "^1.15.8",
